--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/postCss.css": "/css/postCss.css",
+    "/css/scss.css": "/css/scss.css"
 }
